# my-robot-description

./: CMakeLists.txt  README.md  map.pgm  map.yaml  package.xml
config/: mapper_params_localization.yaml.yaml  mapper_params_online_async.yaml  nav2_params_MPPI.yaml  nav2_params_RPP.yaml  slam_config.yaml  slam_params.yaml
description/: ackermann.urdf.xacro  common.xacro  lidar.xacro
launch/: ackermann.launch.py  everything.launch.py  nav.launch.py  nav2_localization.launch.py  nav2_own.launch.py  navigation_MPPI.launch.py  navigation_launch.py  robot.launch.py  rsp.launch.py  slam.launch.py  slam_localization.launch.py  slam_own.launch.py  teleop.launch.py
map/: map_three.pgm  map_three.yaml  map_two.pgm  map_two.yaml  new_map.yaml
