<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>The my_robot_description package</description>
  <maintainer email="sdc@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
